add some new functionality

--- a/index.html
+++ b/index.html
@@ -1,19 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio Website</title>
-    <link rel="stylesheet" href="style.css" />
-    <link
-      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
 
-    
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Portfolio Website</title>
+  <link rel="stylesheet" href="style.css" />
+  <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
+</head>
 
-    <script src="script.js"></script>
-  </body>
+<body>
+
+  <header class="header">
+
+    <a href="#home" class="logo">
+      Shiva <span>Tiwari</span>
+    </a>
+
+    <i class="bx bx-menu" id="menu-icon"></i>
+    <nav class="navbar">
+      <a href="#home">Home</a>
+      <a href="#about">About</a>
+      <a href="#services">Services</a>
+      <a href="#projects">Projects</a>
+      <a href="#contact">Contact</a>
+
+    </nav>
+    <button class="gradient-btn">Contact Me</button>
+  </header>
+  <section class="home" id="home">
+    <div class="home-content">
+      <h1>Hi, It's <span>Shiva</span></h1>
+      <h3>I'm a <span>Graphic Designer</span></h3>
+      <p>
+        A paragraph is a group of sentences that focuses on a single idea or topic. Paragraphs are a conventional way to
+        organize written work, making it easier for readers to follow the author's thoughts
+      </p>
+      <div class="social-icons">
+        <a href="#">
+          <i class="bx bxl-github"></i>
+          </a>
+        <a href="#">
+          <i class="bx bxl-linkedin-square"></i>
+          </a>
+        <a href="#">
+          <i class="bx bxl-instagram-alt"></i>
+          </a>
+        <a href="#">
+          <i class="bx bxl-twitter"></i>
+          </a>
+      </div>
+      <div class="btn-group">
+        <a href="#" class="btn">Hire</a>
+        <a href="#contact" class="btn">Contact</a>
+      </div>
+    </div>
+    <div class="home-img">
+      <img src="image.jpg" alt="">
+    </div>
+
+  </section>
+<section class="about" id="about">
+  <div class="about-img">
+    <img src="image.jpg" alt="">
+  </div>
+  <div class="about-content">
+    <h2>About <span>Me</span></h2>
+    <p> A paragraph is a group of sentences that focuses on a single idea or topic. Paragraphs are a conventional way to
+      organize written work, making it easier for readers to follow the author's thoughts
+    </p>
+  <a href="#" class="btn">Read More</a>
+  </div>
+</section>
+  <script src="script.js"></script>
+</body>
+
 </html>
