add new code and project 6

--- a/index.html
+++ b/index.html
@@ -72,6 +72,145 @@
   <a href="#" class="btn">Read More</a>
   </div>
 </section>
+  <section class="services" id="services">
+    <h2 class="heading">Services</h2>
+    <div class="services-container">
+      <div class="service-box">
+        <div class="service-info">
+      <i class="bx bxs-edit"></i>
+      <h4>Edit | Retouch Photo </h4>
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe, placeat, tempora suscipit beatae, odio nostrum minima veritatis similique cupiditate fugiat molestiae hic! Quidem perspiciatis nesciunt cumque accusamus adipisci. Sint, ab!</p>
+        </div>
+      </div>
+      <div class="service-box">
+        <div class="service-info">
+      <i class="bx bxs-spa"></i>
+      <h4>Logo | Banner Design</h4>
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe, placeat, tempora suscipit beatae, odio nostrum minima veritatis similique cupiditate fugiat molestiae hic! Quidem perspiciatis nesciunt cumque accusamus adipisci. Sint, ab!</p>
+        </div>
+      </div>
+      <div class="service-box">
+        <div class="service-info">
+      <i class="bx bxs-group"></i>
+      <h4>Background Removal</h4>
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe, placeat, tempora suscipit beatae, odio nostrum minima veritatis similique cupiditate fugiat molestiae hic! Quidem perspiciatis nesciunt cumque accusamus adipisci. Sint, ab!</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="projects" id="projects">
+    <h2 class="heading">Projects</h2>
+    <div class="projects-box">
+      <div class="project-card">
+        <img src="project1.jpg" alt="">
+        <h3>Project 1</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe a provident aliquid recusandae eos accusamus temporibus harum error. Assumenda sit nisi minima tenetur cumque aperiam cupiditate labore ducimus ea eos!</p>
+        <div class="btn">Review Project</div>
+      </div>
+
+      <div class="project-card">
+        <img src="project2.jpg" alt="">
+        <h3>Project 2</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe a provident aliquid recusandae eos accusamus temporibus harum error. Assumenda sit nisi minima tenetur cumque aperiam cupiditate labore ducimus ea eos!</p>
+        <div class="btn">Review Project</div>
+      </div>
+
+      <div class="project-card">
+        <img src="project3.jpg" alt="">
+        <h3>Project 3</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe a provident aliquid recusandae eos accusamus temporibus harum error. Assumenda sit nisi minima tenetur cumque aperiam cupiditate labore ducimus ea eos!</p>
+        <div class="btn">Review Project</div>
+      </div>
+
+      <div class="project-card">
+        <img src="project4.jpg" alt="">
+        <h3>Project 4</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe a provident aliquid recusandae eos accusamus temporibus harum error. Assumenda sit nisi minima tenetur cumque aperiam cupiditate labore ducimus ea eos!</p>
+        <div class="btn">Review Project</div>
+      </div>
+
+      <div class="project-card">
+        <img src="project5.jpg" alt="">
+        <h3>Project 5</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe a provident aliquid recusandae eos accusamus temporibus harum error. Assumenda sit nisi minima tenetur cumque aperiam cupiditate labore ducimus ea eos!</p>
+        <div class="btn">Review Project</div>
+      </div>
+
+      <div class="project-card">
+        <img src="project6.jpg" alt="">
+        <h3>Project 6</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe a provident aliquid recusandae eos accusamus temporibus harum error. Assumenda sit nisi minima tenetur cumque aperiam cupiditate labore ducimus ea eos!</p>
+        <div class="btn">Review Project</div>
+      </div>
+    </div>
+  </section>
+
+  <section class="contact" id="contact">
+    <h2 class="heading">Contact <span>Me</span></h2>
+    <form action="#">
+
+      <div class="input-group">
+        <div class="input-box">
+          <input type="text"
+          placeholder="Full Name">
+          <input type="email"
+          placeholder="Email">
+        </div>
+
+        <div class="input-box">
+            <input type="number"
+            placeholder="Phone Number">
+            <input type="text"
+            placeholder="Subject">
+        </div>
+      </div>
+      <div class="input-group-2">
+        <textarea name="" id="" placeholder="Your Message" cols="30" rows="10"></textarea>
+        <input type="submit" value="Send Message" class=" btn">
+      </div>
+    </form>
+  </section>
+  <footer class="footer">
+    <div class="social-icons">
+      <a href="#">
+        <i class="bx bxl-github"></i>
+        </a>
+      <a href="#">
+        <i class="bx bxl-linkedin-square"></i>
+        </a>
+      <a href="#">
+        <i class="bx bxl-instagram-alt"></i>
+        </a>
+      <a href="#">
+        <i class="bx bxl-twitter"></i>
+        </a>
+    </div>
+
+    <ul class="list">
+      <li>
+        <a href="#">Faq</a>
+      </li>
+
+      <li>
+        <a href="#services">Services</a>
+      </li>
+      <li>
+        <a href="#about">About Me</a>
+      </li>
+      <li>
+        <a href="#projects">Projects</a>
+      </li>
+      <li>
+        <a href="#contact">Contact</a>
+      </li>
+
+    </ul>
+
+    <p class="copyright">
+      © Shiva Tiwari | All Right Reserved
+    </p>
+  </footer>
   <script src="script.js"></script>
 </body>
 
